--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "mysql2": "^3.14.0"
+    "express-session": "^1.18.1",
+    "mysql2": "^3.14.0",
+    "uuid": "^11.1.0"
   }
 }
